# esp32wp_controller

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  wppart_table.csv
doc/: wp.vsdx
lcd/: boot_screen.c  handle_ui_key.c  handle_ui_key.h  lcd.c  lcd.h  lv_conf.h  main_screen.c  main_screen.h  pump_screen.c  pump_screen.h  seg_black_10.c  seg_black_14.c  seg_black_20.c  seg_black_40.c  water_screen.c  water_screen.h  water_screen_z.c  water_screen_z.h
main/: CMakeLists.txt  main.c  project_specific.h
pump_op/: pump_files.c  pump_files.h  pumpop.c  pumpop.h
water_op/: waterop.c  waterop.h
