idf_component_register	(
SRCS 					"main.c"
						"../../esp32_common/tcp/ntp_sync.c"
						"../../esp32_common/utils/utils.c"
						"../../esp32_common/utils/ota.c"
						"../../esp32_common/cmds/cmd_wifi.c"
						"../../esp32_common/cmds/cmd_system.c"
						"../../esp32_common/tcp/mqtt_ctrl.c"
						"../../esp32_common/tcp/tcp_log.c"
						"../../esp32_common/comm/spicom.c"
						"../../esp32_common/ad7811/ad7811.c"
						"../pump_op/pumpop.c"
						"../water_op/waterop.c"

INCLUDE_DIRS 			"."
						"../certs"
						"../../esp32_common"
    					"../../esp32_common/cmds"
    					"../../esp32_common/tcp"
    					"../../esp32_common/utils"
    					"../../esp32_common/comm"
    					"../../esp32_common/ad7811"
						"../pump_op"
						"../water_op"
						)
